--- a/Trash_Classification_CV_SuperCategory.ipynb
+++ b/Trash_Classification_CV_SuperCategory.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -186,7 +186,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "hZj4c0xTeMwH",
         "colab": {
@@ -251,7 +251,7 @@
         "id": "HcixSh2GcLys",
         "outputId": "3097abe8-df44-4e75-94bd-e4bbe6fce6f3"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -264,7 +264,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "jI50JlncLBuf",
         "colab": {
@@ -341,7 +341,7 @@
         "id": "juRNutW433Sk",
         "outputId": "766e767e-cd0b-4302-fcfd-60300773916f"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -432,7 +432,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "metadata": {
         "id": "q3gYLKfEd0Hb",
         "colab": {
@@ -500,12 +500,12 @@
       "metadata": {
         "id": "qbIBimc2xlkM"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "-eWMH8Mi8ibt",
         "colab": {
@@ -561,7 +561,7 @@
       "metadata": {
         "id": "RkcPpVWkyTz_"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -576,7 +576,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "metadata": {
         "id": "GZfFboF85rIe",
         "colab": {
@@ -671,7 +671,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": null,
       "metadata": {
         "id": "Z3EyvQbSzu5m"
       },
@@ -711,7 +711,95 @@
             "Epoch 1/50\n",
             "97/97 [==============================] - 466s 5s/step - loss: 1.4005 - accuracy: 0.5291 - val_loss: 1.3372 - val_accuracy: 0.5443\n",
             "Epoch 2/50\n",
-            "35/97 [=========>....................] - ETA: 2:40 - loss: 1.3181 - accuracy: 0.5429"
+            "97/97 [==============================] - 319s 3s/step - loss: 1.3260 - accuracy: 0.5407 - val_loss: 1.3291 - val_accuracy: 0.5443\n",
+            "Epoch 3/50\n",
+            "97/97 [==============================] - 322s 3s/step - loss: 1.2954 - accuracy: 0.5459 - val_loss: 1.3062 - val_accuracy: 0.5417\n",
+            "Epoch 4/50\n",
+            "97/97 [==============================] - 320s 3s/step - loss: 1.2733 - accuracy: 0.5425 - val_loss: 1.3039 - val_accuracy: 0.5417\n",
+            "Epoch 5/50\n",
+            "97/97 [==============================] - 317s 3s/step - loss: 1.2507 - accuracy: 0.5530 - val_loss: 1.3043 - val_accuracy: 0.5547\n",
+            "Epoch 6/50\n",
+            "97/97 [==============================] - 310s 3s/step - loss: 1.2266 - accuracy: 0.5556 - val_loss: 1.3206 - val_accuracy: 0.5521\n",
+            "Epoch 7/50\n",
+            "97/97 [==============================] - 323s 3s/step - loss: 1.2047 - accuracy: 0.5530 - val_loss: 1.3219 - val_accuracy: 0.5443\n",
+            "Epoch 8/50\n",
+            "97/97 [==============================] - 318s 3s/step - loss: 1.1851 - accuracy: 0.5640 - val_loss: 1.3548 - val_accuracy: 0.5469\n",
+            "Epoch 9/50\n",
+            "97/97 [==============================] - 324s 3s/step - loss: 1.1677 - accuracy: 0.5717 - val_loss: 1.3258 - val_accuracy: 0.5547\n",
+            "Epoch 10/50\n",
+            "97/97 [==============================] - 318s 3s/step - loss: 1.1651 - accuracy: 0.5827 - val_loss: 1.3619 - val_accuracy: 0.5417\n",
+            "Epoch 11/50\n",
+            "97/97 [==============================] - 314s 3s/step - loss: 1.1327 - accuracy: 0.5743 - val_loss: 1.3662 - val_accuracy: 0.4792\n",
+            "Epoch 12/50\n",
+            "97/97 [==============================] - 318s 3s/step - loss: 1.1285 - accuracy: 0.5749 - val_loss: 1.3329 - val_accuracy: 0.5286\n",
+            "Epoch 13/50\n",
+            "97/97 [==============================] - 312s 3s/step - loss: 1.1081 - accuracy: 0.5866 - val_loss: 1.3401 - val_accuracy: 0.5469\n",
+            "Epoch 14/50\n",
+            "97/97 [==============================] - 320s 3s/step - loss: 1.0908 - accuracy: 0.5975 - val_loss: 1.3791 - val_accuracy: 0.5391\n",
+            "Epoch 15/50\n",
+            "97/97 [==============================] - 319s 3s/step - loss: 1.0686 - accuracy: 0.6085 - val_loss: 1.3880 - val_accuracy: 0.5339\n",
+            "Epoch 16/50\n",
+            "97/97 [==============================] - 316s 3s/step - loss: 1.0607 - accuracy: 0.6143 - val_loss: 1.4054 - val_accuracy: 0.5104\n",
+            "Epoch 17/50\n",
+            "97/97 [==============================] - 318s 3s/step - loss: 1.0521 - accuracy: 0.6221 - val_loss: 1.4013 - val_accuracy: 0.5365\n",
+            "Epoch 18/50\n",
+            "97/97 [==============================] - 317s 3s/step - loss: 1.0353 - accuracy: 0.6221 - val_loss: 1.4151 - val_accuracy: 0.5208\n",
+            "Epoch 19/50\n",
+            "97/97 [==============================] - 319s 3s/step - loss: 1.0358 - accuracy: 0.6202 - val_loss: 1.4807 - val_accuracy: 0.5391\n",
+            "Epoch 20/50\n",
+            "97/97 [==============================] - 317s 3s/step - loss: 1.0207 - accuracy: 0.6169 - val_loss: 1.4016 - val_accuracy: 0.5286\n",
+            "Epoch 21/50\n",
+            "97/97 [==============================] - 313s 3s/step - loss: 1.0101 - accuracy: 0.6286 - val_loss: 1.5126 - val_accuracy: 0.5208\n",
+            "Epoch 22/50\n",
+            "97/97 [==============================] - 323s 3s/step - loss: 1.0045 - accuracy: 0.6202 - val_loss: 1.4355 - val_accuracy: 0.5391\n",
+            "Epoch 23/50\n",
+            "97/97 [==============================] - 319s 3s/step - loss: 1.0022 - accuracy: 0.6337 - val_loss: 1.4672 - val_accuracy: 0.5286\n",
+            "Epoch 24/50\n",
+            "97/97 [==============================] - 324s 3s/step - loss: 0.9755 - accuracy: 0.6305 - val_loss: 1.4880 - val_accuracy: 0.5365\n",
+            "Epoch 25/50\n",
+            "97/97 [==============================] - 319s 3s/step - loss: 0.9820 - accuracy: 0.6279 - val_loss: 1.4368 - val_accuracy: 0.5078\n",
+            "Epoch 26/50\n",
+            "97/97 [==============================] - 319s 3s/step - loss: 0.9683 - accuracy: 0.6479 - val_loss: 1.5011 - val_accuracy: 0.5104\n",
+            "Epoch 27/50\n",
+            "97/97 [==============================] - 316s 3s/step - loss: 0.9616 - accuracy: 0.6428 - val_loss: 1.5619 - val_accuracy: 0.5391\n",
+            "Epoch 28/50\n",
+            "97/97 [==============================] - 312s 3s/step - loss: 0.9447 - accuracy: 0.6544 - val_loss: 1.4325 - val_accuracy: 0.5260\n",
+            "Epoch 29/50\n",
+            "97/97 [==============================] - 317s 3s/step - loss: 0.9480 - accuracy: 0.6563 - val_loss: 1.4592 - val_accuracy: 0.4948\n",
+            "Epoch 30/50\n",
+            "97/97 [==============================] - 315s 3s/step - loss: 0.9564 - accuracy: 0.6453 - val_loss: 1.4428 - val_accuracy: 0.5104\n",
+            "Epoch 31/50\n",
+            "97/97 [==============================] - 319s 3s/step - loss: 0.9398 - accuracy: 0.6441 - val_loss: 1.4933 - val_accuracy: 0.5052\n",
+            "Epoch 32/50\n",
+            "97/97 [==============================] - 320s 3s/step - loss: 0.9270 - accuracy: 0.6505 - val_loss: 1.4875 - val_accuracy: 0.5339\n",
+            "Epoch 33/50\n",
+            "97/97 [==============================] - 319s 3s/step - loss: 0.9287 - accuracy: 0.6460 - val_loss: 1.4857 - val_accuracy: 0.5156\n",
+            "Epoch 34/50\n",
+            "97/97 [==============================] - 315s 3s/step - loss: 0.9254 - accuracy: 0.6596 - val_loss: 1.5183 - val_accuracy: 0.5208\n",
+            "Epoch 35/50\n",
+            "97/97 [==============================] - 324s 3s/step - loss: 0.9120 - accuracy: 0.6596 - val_loss: 1.5210 - val_accuracy: 0.5312\n",
+            "Epoch 36/50\n",
+            "97/97 [==============================] - 317s 3s/step - loss: 0.9099 - accuracy: 0.6576 - val_loss: 1.5875 - val_accuracy: 0.5208\n",
+            "Epoch 37/50\n",
+            "97/97 [==============================] - 324s 3s/step - loss: 0.9158 - accuracy: 0.6518 - val_loss: 1.5306 - val_accuracy: 0.5156\n",
+            "Epoch 38/50\n",
+            "97/97 [==============================] - 317s 3s/step - loss: 0.9065 - accuracy: 0.6686 - val_loss: 1.5493 - val_accuracy: 0.5417\n",
+            "Epoch 39/50\n",
+            "97/97 [==============================] - 324s 3s/step - loss: 0.8973 - accuracy: 0.6654 - val_loss: 1.5097 - val_accuracy: 0.5130\n",
+            "Epoch 40/50\n",
+            "97/97 [==============================] - 322s 3s/step - loss: 0.8866 - accuracy: 0.6776 - val_loss: 1.5926 - val_accuracy: 0.5234\n",
+            "Epoch 41/50\n",
+            "97/97 [==============================] - 319s 3s/step - loss: 0.8938 - accuracy: 0.6783 - val_loss: 1.4977 - val_accuracy: 0.5286\n",
+            "Epoch 42/50\n",
+            "97/97 [==============================] - 317s 3s/step - loss: 0.8897 - accuracy: 0.6641 - val_loss: 1.5023 - val_accuracy: 0.5156\n",
+            "Epoch 43/50\n",
+            "97/97 [==============================] - 311s 3s/step - loss: 0.8906 - accuracy: 0.6557 - val_loss: 1.5223 - val_accuracy: 0.5260\n",
+            "Epoch 44/50\n",
+            "97/97 [==============================] - 317s 3s/step - loss: 0.8774 - accuracy: 0.6693 - val_loss: 1.6329 - val_accuracy: 0.5365\n",
+            "Epoch 45/50\n",
+            "97/97 [==============================] - 313s 3s/step - loss: 0.8780 - accuracy: 0.6764 - val_loss: 1.5544 - val_accuracy: 0.5208\n",
+            "Epoch 46/50\n",
+            "97/97 [==============================] - 318s 3s/step - loss: 0.8737 - accuracy: 0.6744 - val_loss: 1.5229 - val_accuracy: 0.5182\n"
           ]
         }
       ],
@@ -905,7 +993,22 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "# Unfreeze the base_model. Note that it keeps running in inference mode\n",
+        "# since we passed `training=False` when calling it. This means that\n",
+        "# the batchnorm layers will not update their batch statistics.\n",
+        "# This prevents the batchnorm layers from undoing all the training\n",
+        "# we've done so far.\n",
+        "base_model.trainable = True\n",
+        "model.summary()\n",
+        "\n",
+        "model.compile(\n",
+        "    optimizer=keras.optimizers.Adam(1e-5),  # Low learning rate\n",
+        "    loss=keras.losses.BinaryCrossentropy(from_logits=True),\n",
+        "    metrics=[keras.metrics.BinaryAccuracy()],\n",
+        ")\n",
+        "\n",
+        "epochs = 10\n",
+        "model.fit(train_ds, epochs=epochs, validation_data=validation_ds)"
       ],
       "metadata": {
         "id": "CsAx0dOzgjOg"
