--- a/Trash_Classification_CV_SuperCategory_No_TransferLearning.ipynb
+++ b/Trash_Classification_CV_SuperCategory_No_TransferLearning.ipynb
@@ -846,39 +846,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "tLyG7AqZH2Q2"
-      },
-      "source": [
-        "# Save Model"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "32IylFqtH1MQ",
-        "outputId": "8ad1fc88-ba46-4760-8762-f667ff2cdf6b"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "INFO:tensorflow:Assets written to: /content/drive/MyDrive/Colab Notebooks/Models/saved_garbageclassification_model/assets\n"
-          ]
-        }
-      ],
-      "source": [
-        "saved_model_path = \"/content/drive/MyDrive/Colab Notebooks/Models/saved_garbageclassification_model\"\n",
-        "tf.saved_model.save(model, saved_model_path)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "UIAyB_6RyWEg"
       },
       "source": [
@@ -893,10 +860,28 @@
       },
       "outputs": [],
       "source": [
-        "# Generate predictions\n",
-        "model.load_weights('/content/drive/MyDrive/Colab Notebooks/Models/garbageclassification_model_checkpoint/trashnet_custom_best_weights.hdf5') # initialize the best trained weights\n",
-        "preds = model.predict(test_ds)\n",
-        "pred_classes = np.argmax(preds, axis = 1)"
+        "def make_prediction(filename):\n",
+        "\n",
+        "  class_names = TRAIN_generator.class_indices.items()\n",
+        "  print(class_names)\n",
+        "  \n",
+        "  img = tf.keras.preprocessing.image.load_img(\n",
+        "      filename, target_size=(224, 224)\n",
+        "  )\n",
+        "  img_array = tf.keras.preprocessing.image.img_to_array(img)\n",
+        "  img_array = tf.expand_dims(img_array, 0) # Create a batch\n",
+        "\n",
+        "  predictions = model.predict(img_array)\n",
+        "  print(predictions)\n",
+        "  score = tf.nn.sigmoid(predictions[0])\n",
+        "  print(score)\n",
+        "  print(list(class_names))\n",
+        "  print( \"This image most likely belongs to {} with a {:.2f} percent confidence.\"\n",
+        "      .format(list(class_names)[np.argmax(score)], 100 * np.max(score)) )\n",
+        "  return\n",
+        "\n",
+        "FILE_NAME = '/content/drive/MyDrive/Colab Notebooks/data/trash-test/cigarettebutt (10).jpg'\n",
+        "make_prediction(FILE_NAME)"
       ]
     }
   ],
